--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,28 @@ body {
     background-color: #F5F5F5;
 }
 
+.tipoDeFuente {
+    font-family: "Roboto", sans-serif;
+}
+
+.tituloF {
+    font-size: clamp(2rem, 15vw, 12rem);
+    line-height: 1.1;
+    font-weight: 700; /* Bold */
+}
+
+.tituloS {
+    font-size: clamp(1rem, 4vw, 3rem);
+    font-weight: 500;    
+}
+
+.tituloP {
+    font-size: clamp(0.9rem, 1.5vw, 1.25rem);
+    font-weight: 400;
+    line-height: 1.6;    
+}
+
+
 .custom-nav {
     height: 60px;
 }
