--- a/css/styleAbout.css
+++ b/css/styleAbout.css
@@ -4,9 +4,34 @@
     box-sizing: border-box;
 }
 
+body{
+    background-color: #F5F5F5;
+}
+
+.tipoDeFuente {
+    font-family: "Roboto", sans-serif;
+}
+
+.tituloF {
+    font-size: clamp(2rem, 15vw, 12rem);
+    line-height: 1.1;
+    font-weight: 700; /* Bold */
+}
+
+.tituloS {
+    font-size: clamp(1rem, 4vw, 3rem);
+    font-weight: 500;    
+}
+
+.tituloP {
+    font-size: clamp(0.9rem, 1.5vw, 1.25rem);
+    font-weight: 400;
+    line-height: 1.6;    
+}
+
 .services-section {
 
-    height: 100vh;
+    min-height: 100vh;
     padding: 3rem;
     color: white;
     background-color: #0a0a0a;
@@ -18,8 +43,26 @@
         radial-gradient(circle at bottom left, rgba(255, 255, 255, 0.08), transparent 60%),
         radial-gradient(circle at bottom right, rgba(255, 255, 255, 0.08), transparent 60%),
         url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
-    
+
     background-size: cover;
     background-blend-mode: overlay;
+    border-radius: 20px;
+}
+
+.testimonial-card {
+    transition: transform 0.3s ease, box-shadow 0.4s ease;
+    border: none;
     border-radius: 20px;    
+}
+
+.testimonial-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.6);
+}
+
+.profile-img {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    object-fit: cover;
 }
