--- a/css/styleAbout.css
+++ b/css/styleAbout.css
@@ -17,7 +17,7 @@ body{
 
 
 .tituloSF {
-    font-size: clamp(2rem, 15vw, 14rem);
+    font-size: clamp(2rem, 15vw, 16rem);
     line-height: 1.1;
     font-weight: 700;
     /* Bold */
@@ -52,6 +52,63 @@ body{
     line-height: 1.6;
 }
 
+* {
+    opacity: 0;
+    animation: fadeInUp 0.7s ease forwards;
+}
+
+/* Escalonar los delays automáticamente */
+*:nth-child(1) {
+    animation-delay: 0.s;
+}
+
+*:nth-child(2) {
+    animation-delay: 0.2s;
+}
+
+*:nth-child(3) {
+    animation-delay: 0.3s;
+}
+
+*:nth-child(4) {
+    animation-delay: 0.4s;
+}
+
+*:nth-child(5) {
+    animation-delay: 0.5s;
+}
+
+*:nth-child(6) {
+    animation-delay: 0.6s;
+}
+
+*:nth-child(7) {
+    animation-delay: 0.7s;
+}
+
+*:nth-child(8) {
+    animation-delay: 0.8s;
+}
+
+*:nth-child(9) {
+    animation-delay: 0.9s;
+}
+
+*:nth-child(10) {
+    animation-delay: 1.0s;
+}
+
+@keyframes fadeInUp {
+    from {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
 .services-section {
 
     min-height: 120vh;
