--- a/css/styleAbout.css
+++ b/css/styleAbout.css
@@ -52,63 +52,6 @@ body {
     line-height: 1.6;
 }
 
-* {
-    opacity: 0;
-    animation: fadeInUp 0.7s ease forwards;
-}
-
-/* Escalonar los delays automáticamente */
-*:nth-child(1) {
-    animation-delay: 0.s;
-}
-
-*:nth-child(2) {
-    animation-delay: 0.2s;
-}
-
-*:nth-child(3) {
-    animation-delay: 0.3s;
-}
-
-*:nth-child(4) {
-    animation-delay: 0.4s;
-}
-
-*:nth-child(5) {
-    animation-delay: 0.5s;
-}
-
-*:nth-child(6) {
-    animation-delay: 0.6s;
-}
-
-*:nth-child(7) {
-    animation-delay: 0.7s;
-}
-
-*:nth-child(8) {
-    animation-delay: 0.8s;
-}
-
-*:nth-child(9) {
-    animation-delay: 0.9s;
-}
-
-*:nth-child(10) {
-    animation-delay: 1.0s;
-}
-
-@keyframes fadeInUp {
-    from {
-        opacity: 0;
-        transform: translateY(30px);
-    }
-
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
 
 .services-section {
 
@@ -166,4 +109,15 @@ body {
     background-size: cover;
     background-blend-mode: overlay;
     border-radius: 20px;
+}
+
+.saltC {
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.5s ease;
+    cursor: pointer;
+}
+
+.saltC:hover {
+    transform: translateY(-10px) scale(1.05);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
 }
